Correction Sonar : remplacement collect(Collectors.toList()) par toList() dans ConsultantService